SWAGGER: Setup admin routes
